bindings/swift/didresolver.xcframework/ios-arm64/Headers/didFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
// Continuation callback for UniFFI Futures
typedef void (*UniFfiRustFutureContinuation)(void * _Nonnull, int8_t);
// Scaffolding functions
void*_Nonnull uniffi_didresolver_fn_clone_did(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_didresolver_fn_free_did(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_didresolver_fn_constructor_did_new(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_didresolver_fn_method_did_resolve(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_didresolver_rustbuffer_alloc(int32_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_didresolver_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_didresolver_rustbuffer_reserve(RustBuffer buf, int32_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_u8(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_u8(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_u8(void* _Nonnull handle
);
uint8_t ffi_didresolver_rust_future_complete_u8(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_i8(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_i8(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_i8(void* _Nonnull handle
);
int8_t ffi_didresolver_rust_future_complete_i8(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_u16(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_u16(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_u16(void* _Nonnull handle
);
uint16_t ffi_didresolver_rust_future_complete_u16(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_i16(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_i16(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_i16(void* _Nonnull handle
);
int16_t ffi_didresolver_rust_future_complete_i16(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_u32(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_u32(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_u32(void* _Nonnull handle
);
uint32_t ffi_didresolver_rust_future_complete_u32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_i32(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_i32(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_i32(void* _Nonnull handle
);
int32_t ffi_didresolver_rust_future_complete_i32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_u64(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_u64(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_u64(void* _Nonnull handle
);
uint64_t ffi_didresolver_rust_future_complete_u64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_i64(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_i64(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_i64(void* _Nonnull handle
);
int64_t ffi_didresolver_rust_future_complete_i64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_f32(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_f32(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_f32(void* _Nonnull handle
);
float ffi_didresolver_rust_future_complete_f32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_f64(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_f64(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_f64(void* _Nonnull handle
);
double ffi_didresolver_rust_future_complete_f64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_pointer(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_pointer(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_pointer(void* _Nonnull handle
);
void*_Nonnull ffi_didresolver_rust_future_complete_pointer(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_rust_buffer(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_rust_buffer(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_rust_buffer(void* _Nonnull handle
);
RustBuffer ffi_didresolver_rust_future_complete_rust_buffer(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_didresolver_rust_future_poll_void(void* _Nonnull handle, UniFfiRustFutureContinuation _Nonnull callback, void* _Nonnull callback_data
);
void ffi_didresolver_rust_future_cancel_void(void* _Nonnull handle
);
void ffi_didresolver_rust_future_free_void(void* _Nonnull handle
);
void ffi_didresolver_rust_future_complete_void(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_didresolver_checksum_method_did_resolve(void
    
);
uint16_t uniffi_didresolver_checksum_constructor_did_new(void
    
);
uint32_t ffi_didresolver_uniffi_contract_version(void
    
);